--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "bcryptjs": "^2.4.3",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
-    "next": "^15.5.11",
+    "next": "15.5.11",
+    "@next/swc-win32-x64-msvc": "15.5.11",
     "next-auth": "^4.24.7",
     "nodemailer": "^7.0.7",
     "postcss": "^8.4.47",
