--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "bcryptjs": "^2.4.3",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
-    "next": "15.5.11",
-    "@next/swc-win32-x64-msvc": "15.5.11",
+    "next": "15.5.12",
     "next-auth": "^4.24.7",
     "nodemailer": "^7.0.7",
     "postcss": "^8.4.47",
@@ -41,6 +40,10 @@
     "tailwindcss": "^3.4.14",
     "zod": "^3.23.8"
   },
+  "optionalDependencies": {
+    "@next/swc-linux-x64-gnu": "15.5.12",
+    "@next/swc-win32-x64-msvc": "15.5.12"
+  },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "24.10.1",
@@ -49,7 +52,7 @@
     "@types/react-dom": "19.0.2",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9.17.0",
-    "eslint-config-next": "15.5.11",
+    "eslint-config-next": "15.5.12",
     "prisma": "^5.18.0",
     "typescript": "^5.4.5"
   }
