--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prisma:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "ga:check": "ts-node src/scripts/check-ga.ts",
     "migrate": "dotenv -- prisma migrate dev",
     "postinstall": "prisma generate"
   },
@@ -46,14 +47,17 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/dotenv": "^6.1.1",
     "@types/node": "24.10.1",
     "@types/nodemailer": "^7.0.4",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
+    "dotenv": "^17.2.4",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.5.12",
     "prisma": "^5.18.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
