--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "15.5.12",
     "next-auth": "^4.24.7",
     "nodemailer": "^7.0.7",
+    "pg": "^8.18.0",
     "postcss": "^8.4.47",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -48,16 +49,18 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/dotenv": "^6.1.1",
-    "@types/node": "24.10.1",
+    "@types/node": "^24.10.1",
     "@types/nodemailer": "^7.0.4",
+    "@types/pg": "^8.16.0",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
-    "dotenv": "^17.2.4",
+    "dotenv": "^17.3.1",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.5.12",
     "prisma": "^5.18.0",
+    "supabase": "^2.76.11",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.9.3"
   }
 }
